  won't be able to make their own quits. This affects set::prefix-quit and
  ANTI_SPAM_QUIT_TIME - it simply replaces it with the message if enabled
- Make makecert.bat and encpem.bat show their use in titlebar when run
- Added define TOPIC_NICK_IS_NUHOST - nick!user@host in topic-whoset, undeffed by
  default, read warning in config.h. Only use with 3.2-beta12 or higher
- Made so every join is a SJOIN to prevent TS0 problems. Read config.h to disable this if it causes problems
- Added set::static-quit to unreal32docs.html
- Updated docs to include ripemd-160 encryption option
** beta12 released **
- Fixed problem where SSL handshakes weren't unknown--'ed on remove reported
  by Alzirr
- Compile fix regarding above fix
- Added vhost::swhois requested by FrostByghte (#0000171)
- Fixed a win32 password encryption bug when in NT service mode reported by simonbell
  (#0000285)
- Fixed a problem with set::ssl::certificate and set::ssl::key that used
  ->ce_varname instead of ->ce_vardata. Found by badSol
- Added a newline in dynconf.h
- SSL debugging stuff
- Added some more debugging stuff, made check_pings a little more readable 
- More SSL debugging stuff..
- A minor fix in SSL_is_inited stuff in s_bsd
- Fixed a bug with installing unreal as a services under NT4 reported by peter (#0000295)
- Added the oper login the user has /oper'ed to in the 'is now an operator'
  notice. Suggested by havlaz (#0000287)
- Fixed a bug where aliases {} didn't use tokens reported by havlaz (#0000288)
- Fixed a win32 editor bug when using chars with an ASCII code > 128, reported by XircNet
  (#0000298)
- Fixed a bug in TKL found by DerAlSem where it was possible to add a line for *@* (#0000307)
- Fixed a /who bug where /who +c #chan wouldn't display the name of the channel
  requested reported by aproxity (#0000304)
- Fixed a bug where /who +c #chan would let you see users in a +s channel
- Added Nugget's setuid patch
- Made the IRC_UID stuff more proper..